tests/conformance/syntax/positive/precedence_projection_application_valid.ditt
module Syntax.PrecedenceProjectionApplication where

postulate A : Cat
postulate B : Cat
postulate f : A -> B
app (p : (A * A)) : B = f p.1
