tests/conformance/syntax/negative/precedence_projection_application_invalid.ditt
module Syntax.PrecedenceProjectionApplicationBad where

postulate A : Cat
postulate B : Cat
postulate f : A -> B
app (p : (A * A)) : B = f .1
